[package]
name = "fastwebsockets-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
fastwebsockets = { version = "0.4.2", features = ["hyper", "upgrade"] }
futures-channel = "0.3.28"
futures-util = "0.3.28"
hyper = "0.14.26"
tokio = { version = "1.28.2", features = ["full"] }
